--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,11 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json"
+  "compilerOptions": {
+    "plugins": [
+        {
+            "name": "@styled/typescript-styled-plugin"
+        }
+    ]
+  },
+  "extends": "@tsconfig/react-native/tsconfig.json",
+  
 }
